cleaned notebook and added missing cells for IAM

--- a/Explore UniProtKB with Amazon Neptune.ipynb
+++ b/Explore UniProtKB with Amazon Neptune.ipynb
@@ -88,6 +88,28 @@
     "## Load the UniProt data\n",
     "Instead of executing a large number of insert statements or other API calls, we use the [Amazon Neptune Bulk Loader](https://docs.aws.amazon.com/neptune/latest/userguide/bulk-load-data.html) to load a subset of UniProt RDF files directly from the public S3 bucket.\n",
     "\n",
+    "### Accessing the data\n",
+    "Before we can load data into the Neptune instance, we need an AWS Identity and Access Management (IAM) role that has access to the public bucket where the UniProt data resides. In addition, the Neptune loader requires a VPC endpoint for Amazon S3. For more information on bulk loading requirements, refer to the Neptune documentation on bulk loading](https://docs.aws.amazon.com/neptune/latest/userguide/bulk-load.html). The IAM role and VPC endpoint have already been configured by our cloud formation template. We just need to define the role and endpoint settings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "iamRoleArn = os.environ['NEPTUNE_LOAD_FROM_S3_ROLE_ARN']\n",
+    "neptune_host = os.environ['GRAPH_NOTEBOOK_HOST']\n",
+    "neptune_port = os.environ['GRAPH_NOTEBOOK_PORT']\n",
+    "url = f'https://{neptune_host}:{neptune_port}/loader'"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Determine the files to load\n",
     "The entire UniProt dataset is over 10 Terabytes, and is growing rapidly. To save on time and cost, we only load the data that is relevant to our use case. Loading the complete UniProtKB will take around 74 hours, as the ingestion rate is around 6.6 GB per hour. The majority of loading cost is for the large DB writer instance. Using an r5.8xlarge, the cost per hour is 6.46 USD per hour, so the cost of writing the entire UniProt dataset would be around 478 USD in loading costs. For this example, we only load a single RDF file for Metazoa, the Gene Ontology file, and the taxonomy file. This keeps our total loading time to under one hour, and the cost below 10 USD.\n",
     "These are the files to load:\n",
@@ -98,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,19 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "load id: 970cf9d4-09a2-41e1-964c-2c89e39a095c\n",
-      "load id: 397b09dd-e0db-4c3c-898d-7d8077807a3c\n",
-      "load id: b7f687b8-809a-4022-9d19-41444fbc39b0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loadids = []\n",
     "\n",
@@ -201,36 +213,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "970cf9d4-09a2-41e1-964c-2c89e39a095c \tstatus: LOAD_COMPLETED \tTimeSpent: 131\t, Records: 15950018\n",
-      "397b09dd-e0db-4c3c-898d-7d8077807a3c \tstatus: LOAD_COMPLETED \tTimeSpent: 7\t, Records: 381392\n",
-      "b7f687b8-809a-4022-9d19-41444fbc39b0 \tstatus: LOAD_IN_PROGRESS \tTimeSpent: 416\t, Records: 53070000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "loadids = [\"970cf9d4-09a2-41e1-964c-2c89e39a095c\", \n",
-    "           \"397b09dd-e0db-4c3c-898d-7d8077807a3c\",\n",
-    "           \"b7f687b8-809a-4022-9d19-41444fbc39b0\"]\n",
-    "\n",
+    "import time\n",
     "for load_id in loadids:\n",
     "    req = urllib.request.Request(url = \"/\".join([url, load_id]), method = \"GET\")\n",
     "    req.add_header(\"Content-type\", \"application/json; charset=UTF-8\")\n",
     "    \n",
-    "    with urllib.request.urlopen(req) as resp:\n",
-    "        response_data = json.loads(resp.read().decode(\"utf-8\"))['payload']\n",
-    "      \n",
-    "    status = response_data['overallStatus']['status']\n",
-    "    totalTimeSpent = response_data['overallStatus']['totalTimeSpent']\n",
-    "    totalRecords = response_data['overallStatus']['totalRecords']\n",
-    "    \n",
-    "    print(f\"{load_id} \\tstatus: {status} \\tTimeSpent: {totalTimeSpent}\\t, Records: {totalRecords}\")"
+    "    status = None\n",
+    "    while status != 'LOAD_COMPLETED':\n",
+    "        with urllib.request.urlopen(req) as resp:\n",
+    "            response_data = json.loads(resp.read().decode(\"utf-8\"))['payload']\n",
+    "\n",
+    "        status = response_data['overallStatus']['status']\n",
+    "        totalTimeSpent = response_data['overallStatus']['totalTimeSpent']\n",
+    "        totalRecords = response_data['overallStatus']['totalRecords']\n",
+    "        end = '\\n' if status == 'LOAD_COMPLETED' else '\\r'\n",
+    "        print(f\"{load_id}  status: {status} \\tload time: {totalTimeSpent}s\\trecords: {totalRecords}\", end=end)\n",
+    "        time.sleep(1)"
    ]
   },
   {
@@ -284,24 +286,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f39836a10f249f8a3523ab0180118b5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
@@ -337,24 +324,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f232d9e2fa344b9a7c67ef6d0ec50c8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
@@ -388,24 +360,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4925eff50504d099fb0ed6c2a90dcd9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
@@ -436,24 +393,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17baeff3e7734088b21f9907ea08dc0c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
@@ -492,24 +434,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1700892c55f4d8db8646ae215c95f31",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
@@ -518,7 +445,7 @@
     "PREFIX up: <http://purl.uniprot.org/core/>\n",
     "PREFIX sc: <http://example.org/shortcuts/>\n",
     "\n",
-    "DELETE {\n",
+    "INSERT {\n",
     "   ?subject sc:ancestorGo ?superGo\n",
     "}\n",
     "WHERE{\n",
@@ -538,24 +465,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3bdc3d4653494ee6942d778e17c976e0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
@@ -569,7 +481,7 @@
     "  ?subject a up:Protein ;\n",
     "             up:classifiedWith go:GO_0005158 ;\n",
     "             up:organism taxon:9606 ;\n",
-    "             sc:superGo ?object ;\n",
+    "             sc:ancestorGo ?object ;\n",
     "             ?predicate ?object .\n",
     "} \n",
     "Limit 50"
@@ -596,24 +508,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39f9cddd0128493da865b13d0bdeda7c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "\n",
@@ -654,24 +551,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5340da1f0418496794b4cd016ef55c4b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "\n",
@@ -712,90 +594,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Label(value='Are you sure you want to delete all the data in your cluster?'),))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='I acknowledge that upon deletion the cluster data will no longer be availab…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Button(description='Delete', style=ButtonStyle()), Button(description='Cancel', style=ButtonSty…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8090bdc71dd0461b8c39c5553baa994b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2051e8c576f444e6a9ee2ef745830b4d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Output(),)), Output()))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%db_reset"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%db_reset"
+   ]
   }
  ],
  "metadata": {
