updated images to the same as the blog post

--- a/Explore UniProtKB with Amazon Neptune.ipynb
+++ b/Explore UniProtKB with Amazon Neptune.ipynb
@@ -106,7 +106,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -250,6 +249,7 @@
     "In the list of presented DB instance classes, select *db.r5.large*, the smallest instance available, and then click *Continue*.\n",
     "\n",
     "![image.png](./images/step-2.png)\n",
+    "![image.png](./images/step-2a.png)\n",
     "\n",
     "On the next page, choose *Apply immediately*, and click the *Modify DB Instance* button.\n",
     "\n",
