Replaced the quotes that broke JSON syntax. Edited SPARQL examples: - Added back condition that was not redunant after all... - Replaced superGo by ancestorGo to be consistent with text description. - Made the 2 GO examples consistent.

--- a/Explore UniProtKB with Amazon Neptune.ipynb
+++ b/Explore UniProtKB with Amazon Neptune.ipynb
@@ -330,7 +330,7 @@
     "WHERE {\n",
     "    ?subject a up:Protein ;       \n",
     "             up:organism taxon:9606 ;\n",
-    "             up:classifiedWith ?object ;      \n",
+    "             up:classifiedWith ?object ;\n",
     "             ?predicate ?object .\n",
     "}\n",
     "LIMIT 50"
@@ -347,8 +347,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 3: Filter proteins by GO code  \n",
-    "We can further filter the proteins with a specific GO code. For this query let’s visually inspect all the *Homo Sapiens* proteins related to [GO_0005158](https://www.ebi.ac.uk/QuickGO/GTerm?id=GO:0005158), the GO code for *"insulin receptor binding"*. After we run the query, we can click on the \"Graph\" tab to see the related proteins in a graph diagram."
+    "### Example 3: Filter proteins by GO code\n",
+    "\n",
+    "We can further filter the proteins with a specific GO code. For this query let’s visually inspect all the *Homo Sapiens* proteins related to [GO_0005158](https://www.ebi.ac.uk/QuickGO/GTerm?id=GO:0005158), the GO code for *“insulin receptor binding”*. After we run the query, we can click on the \"Graph\" tab to see the related proteins in a graph diagram."
    ]
   },
   {
@@ -367,6 +368,7 @@
     "    ?subject a up:Protein ;\n",
     "             up:organism taxon:9606 ;\n",
     "             up:classifiedWith go:GO_0005158 ;\n",
+    "             up:classifiedWith ?object ;\n",
     "             ?predicate ?object .\n",
     "} \n",
     "LIMIT 50"
@@ -397,19 +399,19 @@
     "\n",
     "SELECT \n",
     "    (STRAFTER(STR(?protein), \"uniprot/\") AS ?protein_code)\n",
-    "    (STRAFTER(STR(?goCode), \"obo/\") AS ?go_code)\n",
-    "    (STRAFTER(STR(?superGoCode), \"obo/\") AS ?super_go_code)\n",
+    "    (STRAFTER(STR(?go), \"obo/\") AS ?go_code)\n",
+    "    (STRAFTER(STR(?ancestorGo), \"obo/\") AS ?ancestor_go_code)\n",
     "WHERE {       \n",
     "    ?protein a up:Protein ;\n",
     "             up:organism taxon:9606 ;\n",
     "             up:classifiedWith go:GO_0005158 ;\n",
-    "             up:classifiedWith ?goCode .\n",
+    "             up:classifiedWith ?go .\n",
     " \n",
-    "    ?goCode a owl:Class ;\n",
-    "            rdfs:subClassOf ?superGoCode .\n",
+    "    ?go a owl:Class ;\n",
+    "          rdfs:subClassOf ?ancestorGo .\n",
     "    \n",
     "   MINUS {\n",
-    "       ?protein up:classifiedWith ?superGoCode .\n",
+    "       ?protein up:classifiedWith ?ancestorGo .\n",
     "   }\n",
     "} \n",
     "LIMIT 50"
@@ -438,19 +440,19 @@
     "PREFIX sc: <http://example.org/shortcuts/>\n",
     "\n",
     "INSERT {\n",
-    "   ?subject sc:ancestorGo ?superGo\n",
+    "   ?subject sc:ancestorGo ?ancestorGo\n",
     "}\n",
     "WHERE {\n",
-    "   ?subject a up:Protein ;\n",
-    "            up:organism taxon:9606 ;\n",
-    "            up:classifiedWith go:GO_0005158 ;\n",
-    "            up:classifiedWith ?object .\n",
+    "    ?protein a up:Protein ;\n",
+    "             up:organism taxon:9606 ;\n",
+    "             up:classifiedWith go:GO_0005158 ;\n",
+    "             up:classifiedWith ?go .\n",
     " \n",
-    "    ?object a owl:Class ;\n",
-    "            rdfs:subClassOf ?superGo .\n",
-    "   \n",
+    "    ?go a owl:Class ;\n",
+    "          rdfs:subClassOf ?ancestorGo .\n",
+    "    \n",
     "   MINUS {\n",
-    "      ?subject up:classifiedWith ?superGo .\n",
+    "       ?protein up:classifiedWith ?ancestorGo .\n",
     "   }\n",
     "} "
    ]
