--- a/Explore UniProtKB with Amazon Neptune.ipynb
+++ b/Explore UniProtKB with Amazon Neptune.ipynb
@@ -15,12 +15,12 @@
     "# Exploring the UniProt protein knowledge base with AWS Open Data and Amazon Neptune\n",
     "\n",
     "## Introduction \n",
-    "The [Universal Protein Resource (UniProt)](https://www.uniprot.org/) is a widely used resource of protein data that is now available through the Registry of Open Data on AWS. Its centerpiece is the [UniProt Knowledgebase (UniProtKB)](https://www.uniprot.org/help/uniprotkb), a central hub for the collection of functional information on proteins, with accurate, consistent and rich annotation. UniProt data is highly structured with many relationships between protein sequences, annotations, ontologies and other related data sources. UniProt can be directly accessed via the [UniProt website](https://www.uniprot.org/) and is available for bulk downloads in several formats, including RDF which is particularly well suited to represent the complex and connected nature of the data as a graph. Creating a custom knowledge base can enable more advanced use cases, such as joining with other data sources, augmenting data with custom annotations and relationships, or inferring new relationships with analytics or machine learning.\n",
+    "The [Universal Protein Resource (UniProt)](https://www.uniprot.org/) is a widely used resource of protein data that is now available through the Registry of Open Data on AWS. Its centerpiece is the [UniProt Knowledgebase (UniProtKB)](https://www.uniprot.org/help/uniprotkb), a central hub for the collection of functional information on proteins, with accurate, consistent and rich annotation. UniProtKB data is highly structured with many relationships between protein sequences, annotations, ontologies and other related data sources. UniProt can be directly accessed via the [UniProt website](https://www.uniprot.org/) and is available for bulk downloads in several formats, including RDF which is particularly well suited to represent the complex and connected nature of the data as a graph. Creating a custom knowledge base can enable more advanced use cases, such as joining with other data sources, augmenting data with custom annotations and relationships, or inferring new relationships with analytics or machine learning.\n",
     "\n",
     "In this example, we will demonstrate the step-by-step process to create and use your own protein knowledge base using UniProt RDF data. We will show how to ingest a subset of UniProtKB data into your own Amazon Neptune database directly from the Registry of Open Data on AWS. We will then show how to query the data with SPARQL, create new relationships in the data and visualize the data as a graph.\n",
     "\n",
     "### Registry of Open Data on AWS\n",
-    "The [Registry of Open Data](https://registry.opendata.aws/) on AWS makes it easy to find datasets made publicly available through AWS services. UniProtKB is made available through the Registry of Open Data via the [Open Data Sponsorship Program](https://aws.amazon.com/opendata/open-data-sponsorship-program/), which covers the cost of storage for publicly available high-value cloud-optimized datasets. UniProtKB is available in the registry as [RDF](https://www.w3.org/RDF/) files, a standard model for data interchange on the Web that is capable of capturing complex relationships within the data of the UniProtKB. \n",
+    "The [Registry of Open Data](https://registry.opendata.aws/) on AWS makes it easy to find datasets made publicly available through AWS services. UniProt is made available through the Registry of Open Data via the [Open Data Sponsorship Program](https://aws.amazon.com/opendata/open-data-sponsorship-program/), which covers the cost of storage for publicly available high-value cloud-optimized datasets. UniProt is available in the registry as [RDF](https://www.w3.org/RDF/) files, a standard model for data interchange on the Web that is capable of capturing complex relationships within the data of the UniProtKB. \n",
     "\n",
     "> **Looking for other data sets or interested in publishing your data?** \n",
     ">\n",
@@ -108,7 +108,7 @@
     "The entire UniProt dataset is over 10 Terabytes uncompressed, and is growing rapidly. To save on time and cost, we only load the data that is relevant to our use case. Loading the complete UniProtKB will take around 74 hours, as the ingestion rate is around 6.6 GB per hour. The majority of loading cost is for the large DB writer instance. Using an r5.8xlarge, the cost is 6.46 USD per hour, so the cost of writing the entire UniProt dataset would be around 478 USD. For this example, we only load a single RDF file for Metazoa and the taxonomy and Gene Ontology files. This keeps our total loading time to under one hour, and the cost below 10 USD.\n",
     "These are the files to load:\n",
     "- **taxonomy.rdf.gz** - the taxonomy file\n",
-    "- **go.rdf.gz** - the gene ontology file\n",
+    "- **go.rdf.gz** - the Gene Ontology file\n",
     "- **uniprotkb_eukaryota_opisthokonta_metazoa_33208_0.rdf.gz** - a single UniProtKB file for Metazoa"
    ]
   },
@@ -137,7 +137,7 @@
     "Now we have all the information needed to execute the bulk load command. In the code below we define a function that:\n",
     "1.\tCreates a json string of parameters required by the bulk loader command\n",
     "2.\tCreates and sends an http request to the bulk loader endpoint\n",
-    "3.\tReturns bulk load tracking ids that will be used to track the loading process\n",
+    "3.\tReturns bulk load tracking IDs that will be used to track the loading process\n",
     "\n",
     "We call this function for every file we wish to load. The entire loading process will take approximately 50 minutes. Times will vary depending on the region and the number and size of the datasets loaded.\n",
     "\n",
@@ -202,7 +202,7 @@
     "| supporting/* |16   | 8.2 GB   | 1.25 hours |\n",
     "| uniprot/*    | 275 | 482 GB   | 73 hours  |\n",
     "\n",
-    "Loading can take some time, so it's convenient to have a way to monitor the loading progress. The code below calls the Neptune endpoint with the load ID’s we saved previously, and returns a status update on the bulk loading process for each file."
+    "Loading can take some time, so it's convenient to have a way to monitor the loading progress. The code below calls the Neptune endpoint with the load IDs we saved previously, and returns a status update on the bulk loading process for each file."
    ]
   },
   {
@@ -311,9 +311,9 @@
    "source": [
     "### Example 2: Query proteins and their related Gene Onotology (GO) code\n",
     "\n",
-    "Now let's find all the *Homo Sapiens* related proteins that have a [Gene Ontology (GO)](http://geneontology.org) code. The Gene Ontology describes biological concepts with respect to molecular function, cellular components and biological processes. We will use the [9606](https://www.uniprot.org/taxonomy/9606) taxonomy code for *Homo Sapiens*. Since there are so many entries, we will also limit the query results to 50 entries. \n",
+    "Now let's find all the *Homo Sapiens* related proteins that have a [Gene Ontology (GO)](http://geneontology.org) code. The Gene Ontology describes biological concepts with respect to molecular function, cellular components and biological processes. We will use the [9606](https://www.uniprot.org/taxonomy/9606) taxonomy code for *Homo Sapiens*. Since there are so many entries, we will also limit the query results to 50 rows. \n",
     "\n",
-    "In the results returned, *`subject`* refers to the proteins, *`object`* to the proteins' GO codings and *`predicate`* is the link [classifiedWith](http://purl.uniprot.org/core/classifiedWith) from protein to GO. "
+    "In the results returned, *`subject`* refers to the proteins, *`object`* to the proteins' GO codes and *`predicate`* is the link [classifiedWith](http://purl.uniprot.org/core/classifiedWith) from protein to GO. "
    ]
   },
   {
@@ -340,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The query returns the proteins URI along with the respective GO URI. Any proteins without a GO code will not be returned. We could also parse the GO URI to get the GO code if needed."
+    "The query returns the proteins URI along with the respective GO URI. Any proteins without a GO code will not be returned. We could also parse the GO URI to get the GO code if needed (see Example 4)."
    ]
   },
   {
@@ -349,7 +349,7 @@
    "source": [
     "### Example 3: Filter proteins by GO code\n",
     "\n",
-    "We can further filter the proteins with a specific GO code. For this query let’s visually inspect all the *Homo Sapiens* proteins related to [GO_0005158](https://www.ebi.ac.uk/QuickGO/GTerm?id=GO:0005158), the GO code for *“insulin receptor binding”*. After we run the query, we can click on the \"Graph\" tab to see the related proteins in a graph diagram."
+    "We can further filter the proteins with a specific GO code. For this query let’s visually inspect all the *Homo Sapiens* proteins related to [GO_0005158](https://www.ebi.ac.uk/QuickGO/GTerm?id=GO:0005158), the GO code for *“insulin receptor binding”*. After we run the query, we can click on the \"Graph\" tab to see the related proteins with all their GO codes in a graph diagram."
    ]
   },
   {
@@ -380,7 +380,7 @@
    "source": [
     "### Example 4: Find ancestor GO codes\n",
     "\n",
-    "We can also query the ancestor GO codes of proteins. Ancestor GO codes are represented by subclass relationships from a GO code to its ancestor. For example, GO code [1900077](https://www.ebi.ac.uk/QuickGO/term/GO:1900077) is termed as the *“negative regulation of cellular response to insulin stimulus”* and has a *subClassOf* relation to the GO code [0048523](https://www.ebi.ac.uk/QuickGO/term/GO:0048523) which is termed the *“negative regulation of cell cycle”*. \n",
+    "We can also query the ancestor GO codes of proteins. Ancestor GO codes are represented by subclass relationships from a GO code to its ancestors. For example, GO code [1900077](https://www.ebi.ac.uk/QuickGO/term/GO:1900077) is termed as the *“negative regulation of cellular response to insulin stimulus”* and has a *subClassOf* relation to the GO code [0048523](https://www.ebi.ac.uk/QuickGO/term/GO:0048523) which is termed the *“negative regulation of cell cycle”*. \n",
     "\n",
     "Here we want to generate a simple table of codes, and to do this we apply some string functions to keep only the code part of the URIs in the SELECT clause.\n"
    ]
@@ -496,7 +496,7 @@
     "\n",
     "[Rhea](https://www.rhea-db.org/) is an expert-curated knowledgebase of chemical and transport reactions of biological interest, and the standard for enzyme and transporter annotation in UniProtKB. Here in this example, we will use the public [SPARQL endpoint of Rhea](https://sparql.rhea-db.org/sparql) to enrich your Neptune instance with data from Rhea using the [INSERT](https://www.w3.org/TR/sparql11-update/#insertData) operation.\n",
     "\n",
-    "Starting with protein [Q9UBM7](https://www.uniprot.org/uniprot/Q9UBM7), which is a reductase that is part of the cholesterol biosynthetic pathway, we will demonstrate how to fetch the identifiers of the compounds reduced by the enzyme (i.e. the chemical compounds of the enzyme-catalyzed reaction), and then insert links between the protein in UniProtKB and the chemical compounds from Rhea. \n",
+    "Starting with protein [Q9UBM7](https://www.uniprot.org/uniprot/Q9UBM7), a reductase that catalyzes two recations in the cholesterol biosynthetic pathway, we will demonstrate how to fetch the identifiers of all compounds that are metabolized by the enzyme (i.e. the chemical compounds of the enzyme-catalyzed reactions), and then insert links between the protein in UniProtKB and the chemical compounds from Rhea. \n",
     "\n",
     "The Rhea data is an external data store, so we use a [federated query](https://www.w3.org/TR/2013/REC-sparql11-federated-query-20130321/) with the [SERVICE](https://www.w3.org/TR/2013/REC-sparql11-federated-query-20130321/) keyword."
    ]
@@ -508,7 +508,6 @@
    "outputs": [],
    "source": [
     "%%sparql\n",
-    "\n",
     "PREFIX sc:<http://example.org/shortcuts/>\n",
     "PREFIX rh:<http://rdf.rhea-db.org/>\n",
     "PREFIX up:<http://purl.uniprot.org/core/>\n",
