Spotted another typo

--- a/Explore UniProtKB with Amazon Neptune.ipynb
+++ b/Explore UniProtKB with Amazon Neptune.ipynb
@@ -496,7 +496,7 @@
     "\n",
     "[Rhea](https://www.rhea-db.org/) is an expert-curated knowledgebase of chemical and transport reactions of biological interest, and the standard for enzyme and transporter annotation in UniProtKB. Here in this example, we will use the public [SPARQL endpoint of Rhea](https://sparql.rhea-db.org/sparql) to enrich your Neptune instance with data from Rhea using the [INSERT](https://www.w3.org/TR/sparql11-update/#insertData) operation.\n",
     "\n",
-    "Starting with protein [Q9UBM7](https://www.uniprot.org/uniprot/Q9UBM7), a reductase that catalyzes two recations in the cholesterol biosynthetic pathway, we will demonstrate how to fetch the identifiers of all compounds that are metabolized by the enzyme (i.e. the chemical compounds of the enzyme-catalyzed reactions), and then insert links between the protein in UniProtKB and the chemical compounds from Rhea. \n",
+    "Starting with protein [Q9UBM7](https://www.uniprot.org/uniprot/Q9UBM7), a reductase that catalyzes two reactions in the cholesterol biosynthetic pathway, we will demonstrate how to fetch the identifiers of all compounds that are metabolized by the enzyme (i.e. the chemical compounds of the enzyme-catalyzed reactions), and then insert links between the protein in UniProtKB and the chemical compounds from Rhea. \n",
     "\n",
     "The Rhea data is an external data store, so we use a [federated query](https://www.w3.org/TR/2013/REC-sparql11-federated-query-20130321/) with the [SERVICE](https://www.w3.org/TR/2013/REC-sparql11-federated-query-20130321/) keyword."
    ]
