cleared all outputs

--- a/Explore UniProtKB with Amazon Neptune.ipynb
+++ b/Explore UniProtKB with Amazon Neptune.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,24 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e49372a7a458434a9e7e795b63feeb3f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(Output(layout=Layout(max_height='600px', overflow='scroll', width='100%')), Output(layout=Layout…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
@@ -326,24 +311,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e59906b9c9d441da85628a65f5b1bdf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(Output(layout=Layout(max_height='600px', overflow='scroll', width='100%')), Output(layout=Layout…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
@@ -373,29 +343,14 @@
    "source": [
     "### Example 3: Filter proteins by GO description\n",
     "\n",
-    "We can further filter the proteins by pattern matching its GO description. For this query, we will list all the \"*Homo Sapiens*\" proteins classified with \"*cholesterol biosynthetic process*\". To do this, we  add a filter condition containing a regular expression of the GO label. We will also parse the GO IRI so it is easier to read in the  returned results."
+    "We can further filter the proteins by pattern matching its GO description. For this query, we will list all the *Homo Sapiens* proteins classified with \"*cholesterol biosynthetic process*\". To do this, we  add a filter condition containing a regular expression of the GO label. We will also parse the GO IRI so it is easier to read in the  returned results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ac261ea28d94949b867a1c2ede938b9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(Output(layout=Layout(max_height='600px', overflow='scroll', width='100%')), Output(layout=Layout…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
@@ -429,24 +384,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3d16df88f534b76b730be8f3da2411f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(Output(layout=Layout(max_height='600px', overflow='scroll', width='100%')), Output(layout=Layout…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
@@ -483,31 +423,16 @@
    "source": [
     "### Example 5:  Visualize a proteins Gene Ontology (GO)\n",
     "\n",
-    "To visualize the data for a protein in the \"Graph\" tab, we must construct a graph with the links between a protein and its GO codes and ancestor GO codes. We can create these relationships by using the [CONSTRUCT](https://www.w3.org/TR/sparql11-query/#construct) operation which returns a graph with selected triples. For this example, we will only show 20 of the GO codes for the [DHCR7](https://www.uniprot.org/uniprot/Q9UBM7) protein. As a best practice, we use a prefix of http://example.org/shortcuts to distinguish abbreviated predicates from the original UniProt predicates."
+    "To visualize the data for a protein in the \"Graph\" tab, we must construct a graph with the links between a protein and its GO codes and ancestor GO codes. We can create these relationships by using the [CONSTRUCT](https://www.w3.org/TR/sparql11-query/#construct) operation which returns a graph with selected triples. For this example, we will only show 20 of the GO codes for the [DHCR7](https://www.uniprot.org/uniprot/Q9UBM7) protein."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee3f26b9a6e64e9499f4bd6a40b6ca22",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(Output(layout=Layout(max_height='600px', overflow='scroll', width='100%')), Force(network=<graph…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
@@ -559,24 +484,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ad72875cba641a9810d9af61f10b9d4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(Output(layout=Layout(max_height='600px', overflow='scroll', width='100%')), Force(network=<graph…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sparql\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
