added cleanup instructions

--- a/Explore UniProtKB with Amazon Neptune.ipynb
+++ b/Explore UniProtKB with Amazon Neptune.ipynb
@@ -14,6 +14,14 @@
    "source": [
     "# Exploring the UniProt protein knowledgebase with AWS Open Data and Amazon Neptune\n",
     "\n",
+    "<br><br>\n",
+    "<div style=\"display:flex;flex-wrap:wrap;padding:0 4px\">\n",
+    "  <div style=\"flex:20%;padding:0 10px\">\n",
+    "      <img alt=\"Example graph of protein data\" src=\"./images/graph_example.png\" alt=\"Links to Q9UBM7\" style=\"margin-top:8px;vertical-align:middle\"/>\n",
+    "  </div>\n",
+    "\n",
+    "</div>\n",
+    "\n",
     "## Introduction \n",
     "The [Universal Protein Resource (UniProt)](https://www.uniprot.org/) is a widely used resource of protein data that is now available through the Registry of Open Data on AWS. Its centerpiece is the [UniProt Knowledgebase (UniProtKB)](https://www.uniprot.org/help/uniprotkb), a central hub for the collection of functional information on proteins, with accurate, consistent and rich annotation. UniProtKB data is highly structured with many relationships between protein sequences, annotations, ontologies and other related data sources. UniProt can be directly accessed via the [UniProt website](https://www.uniprot.org/) and is available for bulk downloads in several formats, including RDF which is particularly well suited to represent the complex and connected nature of the data as a graph. Creating a custom knowledgebase can enable more advanced use cases, such as joining with other data sources, augmenting data with custom annotations and relationships, or inferring new relationships with analytics or machine learning.\n",
     "\n",
@@ -521,18 +529,30 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion\n",
-    "In this example notebook, we have demonstrated some simple ways to create and use your own protein knowledgebase using the UniProt data available on AWS Open Registry of Data and Amazon Neptune. If you would like to explore further, you can easily run this yourself in your own account. Some other things to try would be joining to other graph databases using federated queries, querying features to train machine learning models, or inferring links with Neptune ML.\n"
+    "## Cleaning up\n",
+    "Be sure to delete you cloud formation template when you are finished and no longer need the Neptune DB to avoid incurring future costs.\n",
+    "\n",
+    "![Delete the CloudFormation template](images/cleanup.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "In this example notebook, we have demonstrated some simple ways to create and use your own protein knowledgebase using the UniProt data available on AWS Open Registry of Data and Amazon Neptune. If you would like to explore further, you can easily run this yourself in your own account. Some other things to try would be joining to other graph databases using federated queries, querying features to train machine learning models, or inferring links with Neptune ML. To learn more about Healthcare & Life Sciences on AWS, visit [aws.amazon.com/health](aws.amazon.com/health)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Danger Zone**\n",
+    "## Danger Zone\n",
     "\n",
     "Use the following code to reset the database\n",
     "\n"
@@ -564,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
